--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 .left_col {
-  background: #2A3F54; }
+  background: #3fb079; }
 
 .nav-sm .container.body .col-md-3.left_col {
   min-height: 100%;
@@ -130,7 +130,7 @@
 .profile_info span {
   font-size: 13px;
   line-height: 30px;
-  color: #BAB8B8; }
+  color: #fff; }
 
 .profile_info h2 {
   font-size: 14px;
@@ -178,7 +178,7 @@
 
 .nav_menu {
   float: left;
-  background: #EDEDED;
+  background: #fff;
   border-bottom: 1px solid #D9DEE4;
   margin-bottom: 10px;
   width: 100%;
@@ -210,7 +210,7 @@ body .container.body .right_col {
 .nav_title {
   width: 230px;
   float: left;
-  background: #2A3F54;
+  background: #3fb079;
   border-radius: 0;
   height: 57px; }
 
@@ -328,8 +328,8 @@ body .container.body .right_col {
   background: #D9DEE4; }
 
 body {
-  color: #73879C;
-  background: #2A3F54;
+  color: #666;
+  background: #3fb079;
   font-family: "Helvetica Neue", Roboto, Arial, "Droid Sans", sans-serif;
   font-size: 13px;
   font-weight: 400;
@@ -427,7 +427,7 @@ h1, .h1, h2, .h2, h3, .h3 {
   margin-bottom: 10px; }
 
 a {
-  color: #5A738E;
+  color: #3fb079;
   text-decoration: none; }
 
 a, a:visited, a:focus, a:active, :visited, :focus, :active, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn.active.focus {
@@ -506,7 +506,7 @@ a:hover, a:focus {
   padding-left: 36px; }
 
 .nav-md ul.nav.child_menu li:before {
-  background: #425668;
+  background: #fff;
   bottom: auto;
   content: "";
   height: 8px;
@@ -519,7 +519,7 @@ a:hover, a:focus {
   border-radius: 50%; }
 
 .nav-md ul.nav.child_menu li:after {
-  border-left: 1px solid #425668;
+  border-left: 1px solid #fff;
   bottom: 0;
   content: "";
   left: 27px;
@@ -557,7 +557,7 @@ a:hover, a:focus {
 
 .nav.side-menu > li.active > a {
   text-shadow: rgba(0, 0, 0, 0.25) 0 -1px 0;
-  background: linear-gradient(#334556, #2C4257), #2A3F54;
+  background: linear-gradient(#3fb079, #3fb079), #3fb079;
   box-shadow: rgba(0, 0, 0, 0.25) 0 1px 0, inset rgba(255, 255, 255, 0.16) 0 1px 0; }
 
 .navbar-brand, .navbar-nav > li > a {
@@ -1419,7 +1419,7 @@ span.right {
   padding: 5px 0 0 0;
   position: fixed;
   width: 230px;
-  background: #2A3F54; }
+  background: #3fb079; }
 
 .sidebar-footer a {
   padding: 7px 0 3px;
@@ -1428,7 +1428,7 @@ span.right {
   font-size: 17px;
   display: block;
   float: left;
-  background: #172D44; }
+  background: #3e9d6f; }
 
 .sidebar-footer a:hover {
   background: #425567; }
@@ -4135,7 +4135,7 @@ ul.notifications {
 
 /** /Dropzone.js **/
 .navbar.nav_title{
-  background: #172d44;
+  /*background: #172d44;*/
 }
 .table > tbody > tr > td {
   vertical-align: middle;
@@ -4147,4 +4147,7 @@ ul.notifications {
   font-size: 13px;
   line-height: 16px;
   margin-bottom: 2px;
+}
+.sidebar-footer .glyphicon{
+  color: #fff;
 }
