--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 .left_col {
-  background: #3fb079; }
+  background: #558b2f; }
 
 .nav-sm .container.body .col-md-3.left_col {
   min-height: 100%;
@@ -215,7 +215,7 @@ body .container.body .right_col {
 .nav_title {
   width: 320px;
   float: left;
-  background: #3fb079;
+  background: #558b2f;
   border-radius: 0;
   height: 57px; }
 
@@ -334,7 +334,7 @@ body .container.body .right_col {
 
 body {
   color: #666;
-  background: #3fb079;
+  background: #558b2f;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
   font-size: 15px;
   font-weight: 400;
@@ -353,7 +353,7 @@ body {
   padding: 10px 0; }
 
 .page-title .title_left {
-  width: 45%;
+  /*width: 45%;*/
   float: left;
   display: block; }
 
@@ -361,8 +361,8 @@ body {
   margin: 9px 0; }
 
 .page-title .title_right {
-  width: 55%;
-  float: left;
+  /*width: 55%;*/
+  float: right;
   display: block; }
 
 .page-title .title_right .pull-right {
@@ -432,7 +432,7 @@ h1, .h1, h2, .h2, h3, .h3 {
   margin-bottom: 10px; }
 
 a {
-  color: #3fb079;
+  color: #558b2f;
   text-decoration: none; }
 
 a, a:visited, a:focus, a:active, :visited, :focus, :active, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn.active.focus {
@@ -520,7 +520,7 @@ a:hover, a:focus {
   position: absolute;
   right: auto;
   width: 8px;
-  z-index: 1;
+  /*z-index: 1;*/
   border-radius: 50%; }
 
 .nav-md ul.nav.child_menu li:after {
@@ -564,7 +564,7 @@ a:hover, a:focus {
 
 .nav.side-menu > li.active > a {
   text-shadow: rgba(0, 0, 0, 0.25) 0 -1px 0;
-  background: linear-gradient(#3fb079, #3fb079), #3fb079;
+  background: linear-gradient(#558b2f, #558b2f), #558b2f;
   box-shadow: rgba(0, 0, 0, 0.25) 0 1px 0, inset rgba(255, 255, 255, 0.16) 0 1px 0; }
 
 .navbar-brand, .navbar-nav > li > a {
@@ -627,9 +627,11 @@ a:hover, a:focus {
 .toggle {
   float: left;
   margin: 0;
-  padding-top: 16px;
+  /*padding-top: 16px;*/
   width: 70px; }
-
+.togglebutton{
+  padding-top: 16px;
+}
 .toggle a {
   padding: 15px 15px 0;
   margin: 0;
@@ -1427,7 +1429,7 @@ span.right {
   padding: 5px 0 0 0;
   position: fixed;
   width: 320px;
-  background: #3fb079; }
+  background: #558b2f; }
 
 .sidebar-footer a {
   padding: 7px 0 3px;
@@ -1436,15 +1438,16 @@ span.right {
   font-size: 17px;
   display: block;
   float: left;
-  background: #3e9d6f; }
+  background: #8bc34a; }
 
 .sidebar-footer a:hover {
   background: #425567; }
 
 /** top tiles  */
 .tile_count {
-  margin-bottom: 20px;
-  margin-top: 20px; }
+  /*margin-bottom: 20px;*/
+  /*margin-top: 20px;*/
+}
 
 .tile_count .tile_stats_count {
   border-bottom: 1px solid #D9DEE4;
@@ -1637,15 +1640,15 @@ h4.graph_title {
 .tile-stats .icon {
   width: 20px;
   height: 20px;
-  color: #BAB8B8;
+  color: #558b2f;
   position: absolute;
-  right: 53px;
-  top: 22px;
+  right: 40px;
+  top: 9px;
   z-index: 1; }
 
 .tile-stats .icon i {
   margin: 0;
-  font-size: 60px;
+  font-size: 40px;
   line-height: 0;
   vertical-align: bottom;
   padding: 0; }
@@ -1760,7 +1763,7 @@ button,
 .buttons,
 .btn,
 .modal-footer .btn + .btn {
-  margin-bottom: 5px;
+  /*margin-bottom: 5px;*/
   margin-right: 5px; }
 
 .btn-group-vertical .btn, .btn-group .btn {
@@ -1901,7 +1904,7 @@ button,
   color: #ffffff;
   background-color: #ffffff;
   height: 1px;
-  margin: 20px 0; }
+  margin: 10px 0; }
 
 span.section {
   display: block;
@@ -2295,7 +2298,7 @@ ul.bar_tabs > li {
   border-radius: 4px 4px 0 0;
   width: 19.2%;
   text-align: center;
-  background-color: #3fb079;
+  background-color: #558b2f;
 }
 .nav.nav-tabs.bar_tabs{
   background: transparent;
@@ -4490,7 +4493,7 @@ tr.shown td.details-control {
 }
 }
 .navbar.nav_title{
-  background: #3fb079;
+  background: #558b2f;
   text-align: center;
 }
 .navbar.nav_title img{
@@ -4506,7 +4509,7 @@ tr.shown td.details-control {
 }
 div.left-menu div.menu>ul>li:hover a, div.left-menu div.menu>ul>li:active a, div.left-menu div.menu>ul>li.active a {
   color: #fff;
-  font-family: 'Roboto-Bold';
+  /*font-family: 'Roboto-Bold';*/
 }
 .profile_info a:focus{
   color: #fff;
@@ -4515,8 +4518,10 @@ ul.tab-fill{
   list-style: none;
 }
 ul.tab-fill li{
- display: inline-block;
+ display: none;
   margin-right: 10px;
+  border-bottom: 5px transparent solid;
+  line-height: 26px;
 }
 .ng-binding{
   background: #EF920D;
@@ -4573,10 +4578,602 @@ ul.tab-fill li:hover{
   position: relative;
 }
 .list-unstyled li{
-  font-size: 13px;
+  font-size: 15px;
   margin-bottom: 5px;
 }
 .list-unstyled .box-money {
   color: #e58b34;
-  font-family: 'Roboto-Regular';
+  /*font-family: 'Roboto-Regular';*/
+  font-weight: 400;
+}
+.well.box_1{
+  box-shadow: 1px 1px 1px 0 rgba(0,0,0,.07),1px 2px 5px 0 rgba(0,0,0,.06) !important;
+  overflow: hidden;
+  position: relative;
+  /*display: inline-block;*/
+  padding: 10px 0 0;
+  background: #fff;
+  cursor: pointer;
+  border-radius: 5px !important;
+}
+.well.box_1:hover{
+  -webkit-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
+}
+.order-speed{
+  color: #448f47;
+  /*font-family: 'Roboto-Light';*/
+  padding: 5px 30px 5px 30px;
+  border: 1px solid #a5c9af;
+  border-radius: 2px;
+  margin-left: 5px;
+}
+/*tracking modal*/
+.modal-tracking .modal-body {
+  padding: 10px 35px;
+}
+
+.tracking {
+  width: 100%;
+  padding: 20px;
+  height: auto;
+  display: inline-block;
+}
+.modal-tracking .con-tracking {
+  padding-top: 25px;
+}
+.modal-tracking .con-tracking, .modal-tracking .details-tracking {
+  box-shadow: none;
+  padding: 0;
+}
+.con-tracking {
+  background: #fff;
+}
+.con-tracking {
+  box-shadow: 1px 1px 1px 0 rgba(0,0,0,.07),1px 2px 5px 0 rgba(0,0,0,.06);
+  display: inline-block;
+}
+.con-tracking {
+  position: relative;
+  /*min-height: 380px;*/
+  background: #fff url(../images/bg-tracking.png) repeat center;
+  box-shadow: 0 0 9px 0 #888;
+  padding-top: 40px;
+  padding-bottom: 61px;
+}
+.ic-xe {
+  background-position: -85px 0;
+  width: 70px;
+  height: 62px;
+}
+.ic-tracking {
+  display: inline-block;
+  background-image: url(../images/ic-tracking.png);
+  background-repeat: no-repeat;
+  text-indent: -9999px;
+  vertical-align: middle;
+}
+.modal-tracking .tracking-table {
+  margin-bottom: 0;
+}
+.tracking-table {
+  margin-top: 25px;
+}
+.tracking-table {
+  margin-bottom: 40px;
+}
+.tracking-table {
+  margin-top: 10px;
+  width: 100%;
+}
+.fix-padlr.cl-center {
+  padding-right: 20px;
+  margin-top: 35px;
+}
+
+.img-car {
+  /*border-bottom: 1px dashed #424545;*/
+  min-height: 20px;
+  width: 100%;
+}
+ol, ul {
+  list-style: none;
+}
+.ul-date-car {
+  position: relative;
+  padding: 0;
+  width: 100%;
+  display: inline-block;
+}
+.ul-date-car li {
+  background: 0;
+  padding-top: 0;
+  margin-top: -8px;
+  font-size: 10px;
+  text-transform: none;
+}
+.ul-date-car li {
+  width: 12.5%;
+}
+.ul-date-car li {
+  float: left;
+  width: 9%;
+  text-align: center;
+  /*background: url(../images/dot-tracking.png) no-repeat center 10px;*/
+  height: 50px;
+  /*padding-top: 30px;*/
+  text-transform: uppercase;
+  font-weight: bold;
+  opacity: 0.4;
+  z-index: 1;
+}
+.ul-date-car li.active {
+  opacity: 1;
+}
+.ul-date-car li:before, .ul-date-car li.date-past:before, .ul-date-car li.date-max:before {
+  z-index: 2;
+}
+.ul-date-car li:before, .ul-date-car li.date-past:before, .ul-date-car li.date-max:before {
+  font-size: 0;
+}
+.ul-date-car li.date-past:before {
+  border-color: #53f6a7;
+}
+.ul-date-car li:before, .ul-date-car li.date-past:before, .ul-date-car li.date-max:before {
+  color: #fff;
+  /*border: solid 3px #e8f1f6;*/
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  line-height: 10px;
+  font-size: 12px;
+  background: #fff;
+  margin: 0 auto;
+  z-index: 1;
+  position: relative;
+}
+.ul-date-car li.date-past:before {
+  /*color: #53d68b;*/
+}
+.ul-date-car li:before {
+  content: "\f111";
+  font-family: FontAwesome;
+  display: block;
+  font-size: 11px;
+}
+.fix-status {
+  border-radius: 4px;
+}
+.fix-status {
+  position: absolute;
+  bottom: 100px;
+  border: solid 1px #53d68b;
+  margin: 0 auto;
+  width: 150%;
+  left: -30%;
+  padding: 5px;
+  color: #53d68b;
+  font-weight: 400;
+}
+.ul-date-car li.date-past:after {
+  background: #a9fad3;
+}
+.ul-date-car li:after {
+  /*content: '';*/
+  /*width: 100%;*/
+  /*height: 3px;*/
+  /*display: inline-block;*/
+  /*background: #f0f6f9;*/
+  /*position: absolute;*/
+  /*right: 50%;*/
+  /*top: 6px;*/
+  /*z-index: 0;*/
+}
+.ul-date-car li:after {
+  top: 7px;
+}
+.ul-date-car li:after {
+  z-index: 1;
+}
+.fix-status:before {
+  content: '';
+  position: absolute;
+  border-style: solid;
+  border-width: 8px 6px 0 6px;
+  border-color: #53d68b transparent;
+  width: 0;
+  height: 0;
+  left: 50%;
+  margin-left: -4px;
+  bottom: -8px;
+}
+.fix-status:after {
+  content: '';
+  position: absolute;
+  border-style: solid;
+  border-width: 8px 6px 0 6px;
+  border-color: #fff transparent;
+  width: 0;
+  height: 0;
+  left: 50%;
+  margin-left: -4px;
+  bottom: -7px;
+}
+.fix-padlr {
+  padding-left: 0;
+  padding-right: 0;
+}
+.ic-co {
+  background-position: -171px 0;
+  width: 50px;
+  height: 62px;
+}
+.ic-tracking {
+  display: inline-block;
+  background-image: url(../images/ic-tracking.png);
+  background-repeat: no-repeat;
+  text-indent: -9999px;
+  vertical-align: middle;
+}
+.ic-nguoidung {
+  background-position: -30px 0;
+  width: 16px;
+  height: 16px;
+}
+.ic-diadiem {
+  background-position: -30px -36px;
+  width: 16px;
+  height: 16px;
+}
+.ic-dienthoai {
+  background-position: -30px -75px;
+  width: 16px;
+  height: 16px;
+}
+.details-tracking {
+  position: relative;
+  /*min-height: 380px;*/
+  /*font-family: 'Roboto-Regular';*/
+  box-shadow: 0 0 9px 0 #888;
+  padding-top: 40px;
+  padding-bottom: 61px;
+}
+.modal-tracking .title {
+  font-size: 20px;
+  color: #2e7848;
+  /*font-family: 'Roboto-Bold';*/
+}
+.tracking-toggle {
+  /*padding-left: 85px;*/
+}
+.modal-tracking .tracking-toggle span:first-child {
+  top: 9px;
+}
+.tracking-toggle span:first-child {
+  min-width: 65px;
+  font-size: 15px;
+  padding: 2px 5px;
+}
+.tracking-toggle span:nth-child(2) {
+  width: 0;
+  display: none;
+}
+.tracking-toggle span.tk-address {
+  word-break: break-word;
+}
+.tracking-toggle span.tk-address {
+  font-size: 15px;
+  /*font-family: 'Roboto-Regular';*/
+  font-weight: normal;
+}
+.tracking-toggle .tk-address {
+  color: #41d58d;
+}
+.collapse.in {
+  display: block;
+}
+.con-details-tracking {
+  margin-left: 10px;
+}
+.con-details-tracking {
+  border-left: 2px solid #cfd8dc;
+  padding: 0 15px;
+  margin: 15px 0;
+}
+.con-details-tracking .item {
+  padding-right: 420px;
+  padding-left: 45px;
+}
+.con-details-tracking .item {
+  /*font-family: 'Roboto-Light';*/
+  font-weight: 100;
+  font-size: 13px;
+  font-weight: normal;
+  position: relative;
+  padding: 5px 380px 5px 50px;
+}
+.con-details-tracking .item label:first-child {
+  padding: 0 3px;
+  display: inline-block;
+  color: #fe6804;
+  background: 0;
+  position: absolute;
+  left: 0;
+  top: 5px;
+}
+.con-details-tracking .item label {
+  font-weight: 100;
+}
+.con-details-tracking .item label:last-child {
+  position: absolute;
+  right: 0;
+  top: 5px;
+}
+.con-details-tracking .item label:last-child span:first-child {
+  display: inline-block;
+  width: 265px;
+}
+.con-details-tracking .item label:last-child span:first-child:before {
+  content: '';
+  background-image: url(../images/ic-tracking.png);
+  display: inline-block;
+  background-position: -30px 0;
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  left: 0;
+}
+.con-details-tracking .item label:last-child span:last-child:before {
+  content: '';
+  background-image: url(../images/ic-tracking.png);
+  display: inline-block;
+  background-position: 0 0;
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  left: 0;
+}
+.modal-tracking  .modal-dialog {
+  width: 80%;
+  padding: 3px 0;
+}
+.ul-date-car:after {
+  content: '';
+  width: calc(100% - 60px);
+  height: 3px;
+  display: inline-block;
+  background: #f0f6f9;
+  position: absolute;
+  top: -1px;
+  z-index: 0;
+  left: 0;
+  margin: 0 30px;
+}
+.ul-date-car li {
+  position: relative;
+}
+.ic-gio {
+  background-position: 0 0;
+  width: 16px;
+  height: 16px;
+}
+.ic-can {
+  background-position: -59px -75px;
+  width: 16px;
+  height: 17px;
+}
+.ic-thuoc {
+  background-position: 0 -75px;
+  width: 16px;
+  height: 8px;
+}
+.ic-tien {
+  background-position: -59px -104px;
+  width: 16px;
+  height: 16px;
+}
+.ic-ghichu {
+  background-position: -30px -105px;
+  width: 16px;
+  height: 16px;
+}
+.tracking-table tr td:first-child {
+  width: 20%;
+  text-align: center;
+  height: 35px;
+}
+.tracking-table tr td:last-child {
+  width: 80%;
+  /*font-family: 'Roboto-Regular';*/
+  font-size: 16px;
+}
+.tracking-table tr td:last-child, .con-details-tracking p {
+  /*font-family: 'Roboto-Light';*/
+  font-size: 13px;
+  font-weight: normal;
+}
+.con-details-tracking .item label {
+  font-weight: 100;
+  color: #000;
+  font-weight: 400;
+  font-size: 13px;
+}
+.tracking-toggle span:first-child {
+  border-radius: 20px;
+  background: #69f0ae;
+  /* padding-left: 0; */
+  padding: 0 16px;
+  color: #fff;
+}
+.con-details-tracking .item label:last-child span:first-child, .con-details-tracking .item label:last-child span:last-child {
+  background: 0;
+  position: relative;
+  padding-left: 25px;
+}
+.con-details-tracking .item label:last-child span:first-child {
+  display: inline-block;
+  width: 265px;
+}
+.modal-tracking .modal-title {
+  font-size: 20px;
+  color: #2e7848;
+  /*font-family: 'Roboto-Bold';*/
+  font-weight: bold;
+}
+.ul-date-car li img{
+  width: 50px;
+  position: absolute;
+  top: -38px;
+  right: 17px;
+  z-index: 999;
+}
+.img-product-view{
+  max-width: 100%;
+  text-align: center;
+  margin: 0 auto;
+  /*height: 80px;*/
+}
+.img-product-view img{
+  margin: 0 auto;
+  height: 100px;
+  width: 100px;
+  max-width: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 10px;
+}
+.selectize-control.single .selectize-dropdown .selected{
+  background-color: transparent !important;
+}
+.selectize-control.single .selectize-dropdown .active{
+  background-color: #EEEEEE !important;
+}
+.selectize-control.single .selectize-dropdown, .selectize-control.multi .selectize-dropdown{
+  max-height: 200px !important;
+  overflow: auto;
+}
+.ul-date-car li >span{
+  font-weight: normal;
+}
+.dtp-buttons button.btn-flat{
+  margin: 0 3px!important;
+}
+.product-detail ul li{
+  color:#666;
+
+}
+.product-detail h4{
+  color: #666;
+}
+
+.tab-fill li.show-menu{
+  display: inline-block;
+}
+.other-item-button{
+  position: relative;
+}
+.other-item-button .other-item-list li{
+  display: block;
+
+}
+.other-item-button .other-item-list{
+  width: 200px;
+  position: absolute;
+  z-index: 999;
+  background: #fff;
+  border: 1px solid rgba(218, 218, 218, 0.71);
+  padding: 5px;
+  text-align: right;
+  top: 30px;
+  right: 0;
+  display: none;
+}
+.other-item-button:hover .other-item-list{
+  display: block;
+}
+.number-inventory{
+  /*border-bottom: 1px solid ;*/
+  color: #FF9800;
+  font-weight: bold;
+}
+
+.box-detail ul li{
+  color:#666;
+
+}
+.box-detail h4{
+  color: #666;
+}
+.note-order{
+  border: 1px solid rgba(158, 158, 158, 0.54);
+  border-radius: 4px;
+  padding: 10px;
+
+}
+.list-order{
+  border: 1px solid rgba(158, 158, 158, 0.54);
+  border-radius: 4px;
+  padding: 10px;
+  border-collapse: inherit;
+
+
+}
+.list-order tbody tr:first-child th,.list-order tbody tr:first-child td{
+  border-top: none;
+
+}
+.list-unstyled i{
+  padding-right: 10px;
+  float: left;
+  width: 15%;
+}
+.toggle.nav{
+   padding-top: 16px;
+}
+.note-order-edit{
+  border: 1px solid #d2d2d2 !important;
+  border-bottom: none !important;
+  border-radius: 5px !important;
+}
+.number-product{
+  border: 1px solid #d2d2d2 !important;
+  border-radius: 5px !important;
+}
+.pageface {
+  background: #4CAF50;
+  padding: 0;
+  position: absolute;
+  /*bottom: -420px;*/
+  box-shadow: 0 0 2px 1px rgba(0,0,0,.06);
+  transition: all .5s ease-in;
+  bottom: -500px;
+  width: 100%;
+}
+.pageface .title {
+  color: #fff;
+  font-size: 14px;
+  padding: 10px 20px;
+  cursor: pointer;
+  text-align: center;
+  font-weight: 400;
+  z-index: 9999;
+}
+.pageface.show .title i.fa-minus {
+  font-size: 13px;
+  float: right;
+  margin-top: 5px;
+  display: block;
+}
+.pageface.show {
+  bottom: 0;
+}
+.pageface .title i.fa-minus {
+  display: none;
+}
+.pageface.show .title i.fa-minus {
+  font-size: 13px;
+  float: right;
+  margin-top: 5px;
+  display: block;
 }
