--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -6810,3 +6810,79 @@ ol, ul {
 	z-index: 999;
 }
 /*end track*/
+.product_item .image_wrap img{
+	max-height: 243px;
+	width: 243px;
+}
+.product_item .image_wrap img {
+	max-width: 100%;
+
+	-moz-transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
+}
+.product_item .image_wrap:hover img {
+	-moz-transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+}
+
+ul.pagination {
+	display: inline-block;
+	padding: 0;
+	margin: 0;
+}
+
+ul.pagination li {display: inline;}
+
+ul.pagination li {
+	color: black;
+	float: left;
+	padding: 8px 16px;
+	text-decoration: none;
+	transition: background-color .3s;
+	border: 1px solid #ddd;
+	margin: 0 4px;
+}
+
+
+ul.pagination li.active {
+	background-color: #4CAF50;
+	color: white;
+	border: 1px solid #4CAF50;
+}
+
+ul.pagination li:hover:not(.active) {
+	background-color: #ddd;
+}
+.list_of_entries .entry_thumb{
+	height: 50px;
+	width: 50px;
+}
+.info-customer td,.info-customer table th{
+	border:none;    padding: 5px 5px;
+}
+.product-list td,.info-customer table th{
+	border:none;
+
+}
+.product-list th, .product-list td {
+	/* border: 1px solid #eaeaea; */
+	padding: 5px;
+	border: none;
+	background: none;
+}
+.product-list tr{
+	border-bottom: 1px solid;
+}
+
+.product-list tr:last-child{
+	border-bottom: none;
+}
+.related_posts .entry_thumb img{
+	width: 88px;
+	height: 88px;
+}
+.list_view img {
+	width: 200px;
+}
