--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 .left_col {
-  background: #558b2f; }
+  background: #0f9d58; }
 
 .nav-sm .container.body .col-md-3.left_col {
   min-height: 100%;
@@ -215,7 +215,7 @@ body .container.body .right_col {
 .nav_title {
   width: 320px;
   float: left;
-  background: #558b2f;
+  background: #0f9d58;
   border-radius: 0;
   height: 57px; }
 
@@ -334,7 +334,7 @@ body .container.body .right_col {
 
 body {
   color: #666;
-  background: #558b2f;
+  background: #0f9d58;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
   font-size: 15px;
   font-weight: 400;
@@ -432,7 +432,7 @@ h1, .h1, h2, .h2, h3, .h3 {
   margin-bottom: 10px; }
 
 a {
-  color: #558b2f;
+  color: #0f9d58;
   text-decoration: none; }
 
 a, a:visited, a:focus, a:active, :visited, :focus, :active, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn.active.focus {
@@ -564,7 +564,7 @@ a:hover, a:focus {
 
 .nav.side-menu > li.active > a {
   text-shadow: rgba(0, 0, 0, 0.25) 0 -1px 0;
-  background: linear-gradient(#558b2f, #558b2f), #558b2f;
+  background: linear-gradient(#0f9d58, #0f9d58), #0f9d58;
   box-shadow: rgba(0, 0, 0, 0.25) 0 1px 0, inset rgba(255, 255, 255, 0.16) 0 1px 0; }
 
 .navbar-brand, .navbar-nav > li > a {
@@ -1430,7 +1430,7 @@ span.right {
   padding: 5px 0 0 0;
   position: fixed;
   width: 320px;
-  background: #558b2f; }
+  background: #0f9d58; }
 
 .sidebar-footer a {
   padding: 7px 0 3px;
@@ -1641,7 +1641,7 @@ h4.graph_title {
 .tile-stats .icon {
   width: 20px;
   height: 20px;
-  color: #558b2f;
+  color: #0f9d58;
   position: absolute;
   right: 40px;
   top: 9px;
@@ -2299,7 +2299,7 @@ ul.bar_tabs > li {
   border-radius: 4px 4px 0 0;
   width: 19.2%;
   text-align: center;
-  background-color: #558b2f;
+  background-color: #0f9d58;
 }
 .nav.nav-tabs.bar_tabs{
   background: transparent;
@@ -4495,7 +4495,7 @@ tr.shown td.details-control {
 }
 }
 .navbar.nav_title{
-  background: #558b2f;
+  background: #0f9d58;
   text-align: center;
 }
 .navbar.nav_title img{
@@ -5143,7 +5143,7 @@ ol, ul {
   border-radius: 5px !important;
 }
 .pageface {
-  background: #4CAF50;
+  background: #006950;
   padding: 0;
   position: absolute;
   /*bottom: -420px;*/
