--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1526,7 +1526,7 @@ ul.top_profiles li:nth-child(odd) {
   background-color: #eee; }
 
 .media .profile_thumb {
-  border: 1px solid;
+  /*border: 1px solid;*/
   width: 50px;
   height: 50px;
   margin: 5px 10px 5px 0;
