--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -224,6 +224,19 @@ body .container.body .right_col {
     width: 100%;
     /*margin: 0; */
   }
+  .btn-close-mn{
+    top: 5px;
+    right: 12px;
+    position: absolute;
+    padding: 3px 9px;
+    background: #4CAF50
+  }
+  .nav-md .container.body .right_col{
+    margin-left: 0;
+  }
+  .main_container .top_nav {
+    margin-left: 0 !important;
+  }
 .navbar-right{
   display: none;
 }
@@ -5424,7 +5437,20 @@ div.dataTables_wrapper div.dataTables_processing {
   width: 150%;
 }
 #app .middle{
-  background-image: url(https://5sao.ghn.vn/content/ontime/img/login/bg01.jpg?v=3.9.0.4);
+  position: relative;
+}
+#app .middle:after {
+  content : "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url('../images/loginbg.jpg');
+
+  width: 100%;
+  height: 100%;
+  opacity : 0.5;
+  z-index: -1;
 }
 table.dtp-picker-days thead{
   display: none !important;
