--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -203,6 +203,7 @@
   height: 100%;
   box-shadow: 0 0 2px 1px #888;
   -webkit-box-shadow: 0 0 3px 1px #888;
+  z-index: 9;
   position: fixed; }
 
 body .container.body .right_col {
